frontend/deployment-front.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: todo-front
  labels:
    app: todo-app
spec:
  selector:
    matchLabels:
      app: todo-app
      tier: front
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-app
        tier: front
    spec:
      containers:
      - name: todo-front
        image: 618548633277.dkr.ecr.eu-west-1.amazonaws.com/todolist-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 7700
      imagePullSecrets:
      - name: eu-west-1-ecr-registry
