frontend/Service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-front
  labels:
    app: todo-app
spec:
  ports:
  - port: 7700
  selector:
     app: todo-app
     tier: front
